redbull multiple packs, scrollbar for packs, code cleanup and bug flixes, and pack counter tabs

--- a/modules/redbull/client/css/draft.scss
+++ b/modules/redbull/client/css/draft.scss
@@ -2,7 +2,6 @@
 position: relative;
 width: 100%;
 height: 100%;
-overflow: hidden;
 }
 .iscroll-scroller {
 position: absolute;
@@ -126,6 +125,19 @@ min-height: 100%;
                 height: 600px; //height: 684px;
                 background: url("../img/modules/redbull/client/img/bg-glow.jpg") no-repeat center center;
                 z-index: 3;
+                
+                &.glow-pulse {
+                    webkit-animation: glow-pulse 2s linear;
+                    animation: glow-pulse 5s linear infinite;
+                }
+                
+                @keyframes glow-pulse {
+                    0% { opacity: 1; }
+                    25% { opacity: .7; }
+                    50% { opacity: 1; }
+                    75% { opacity: .6; }
+                    100% { opacity: 1; }
+                } 
             }
             
             .packs {
@@ -143,10 +155,35 @@ min-height: 100%;
                     margin: 30px auto;
                     width: 155px;
                     height: 212px;
+                    z-index: 100;
+                    
+                    .pack-tab {
+                        position: absolute;
+                        top: 10px;
+                        right: 30px;
+                        min-width: 23px;
+                        height: 37px;
+                        background: url("../img/modules/redbull/client/img/pack-tab.png") center top no-repeat;
+                        z-index: 103;
+                        color: #FFF;
+                        font-family: hs;
+                        text-align: center;
+                        line-height: 26px;
+                        font-size: 20px;
+                        text-shadow: 0px 0px 1px rgba(0,0,0,.4);
+                        
+                        &.goblins-vs-gnomes {
+                            top: 15px;
+                        }
+                        
+                        &.the-grand-tournament {
+                            top: 15px;
+                        }
+                    }
                     
                     .pack,
                     .pack-next {
-                        position: relative;
+                        position: absolute;
                         left: 0px;
                         top: 0px;
                         width: 155px;
@@ -182,10 +219,16 @@ min-height: 100%;
                             background: none !important;
                         }
                     }
-
-                    .pack-next {
-                        position: absolute;
-                        z-index: 100;
+                    
+                    .pack {
+                        position: relative;
+                        z-index: 102;
+                        
+                        &.ui-draggable-dragging {
+                            transform: scale(1.05) perspective(300px) rotateY(10deg);
+                            webkit-transform: scale(1.05) perspective(300px) rotateY(10deg);
+                            z-index: 104;
+                        }
                     }
                 }
                 
